# carms-explorer

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docker/: Dockerfile.app  Dockerfile.dagster  Dockerfile.dashboard  Dockerfile.docs  dagster_workspace.yaml  docker-compose.prod.yml  docker-compose.yml  init-db.sql
docs/: mkdocs.yml
docs/docs/: agent.md  api-reference.md  architecture.md  data-model.md  data-warehouse.md  deployment.md  etl-pipeline.md  index.md  program-landscape.md  semantic-search.md
reports/: program_landscape.qmd
src/: dagster.yaml  dagster_workspace.yaml
src/carms/: __init__.py  config.py
src/carms/agent/: __init__.py  agent.py  pdf_profile.py  tools.py
src/carms/api/: __init__.py  deps.py  main.py  schemas.py
src/carms/api/routers/: agent.py  analytics.py  disciplines.py  health.py  programs.py  rag.py  reports.py  search.py
src/carms/api/static/: chat.js  index.html  styles.css
src/carms/dashboard/: __init__.py  app.py
src/carms/db/: engine.py  models.py  views.py  warehouse.py
src/carms/etl/: __init__.py  definitions.py  resources.py
src/carms/etl/assets/: __init__.py  embeddings.py  raw_data.py  reports.py  staging.py  warehouse.py
src/carms/reports/: __init__.py  base.py  discipline_summary.py  program_gap_analysis.py  registry.py  school_coverage.py
src/carms/search/: __init__.py  embeddings.py  rag.py  retriever.py
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
tests/: conftest.py  test_models.py
tests/test_api/: test_agent.py  test_analytics.py  test_disciplines.py  test_programs.py  test_reports.py  test_search.py
tests/test_etl/: test_raw_data.py  test_staging.py
tests/test_reports/: test_discipline_summary.py  test_gap_analysis.py  test_school_coverage.py
tests/test_search/: test_retriever.py
